cdebconf (0.124) UNRELEASED; urgency=low

  [ Jérémy Bobbio ]
  * Load frontend with RTLD_NOW | RTLD_GLOBAL to allow plugins to access
    frontend API without requiring calls to dlsym().  Kudos to Steve Langasek
    for the help to figure this out!

 -- Jérémy Bobbio <lunar@debian.org>  Tue, 25 Sep 2007 19:04:00 +0200

cdebconf (0.123) unstable; urgency=low

  * Temporarily make the cdebconf package depend on debconf, to avoid anyone
    breaking their systems by removing debconf, which dependencies now allow.
    Closes: #443627
    (This will be removed once the cdebconf transition is complete; see
    #328498)

 -- Joey Hess <joeyh@debian.org>  Sun, 23 Sep 2007 15:21:46 -0400

cdebconf (0.122) unstable; urgency=medium

  * Explcitly link gtk frontend to libdebian-installer.

 -- Joey Hess <joeyh@debian.org>  Wed, 19 Sep 2007 19:14:30 -0400

cdebconf (0.121) unstable; urgency=medium

  * Link newt frontend to slang explicitly, since it calls slang functons
    directly.
  * Link rfc822db backend to libdebian-installer explicitly, ditto.
  * Link libdebconf to libdl, ditto.
  * Needed by new mklibs-readeldf, thus increasing urgency.

 -- Joey Hess <joeyh@debian.org>  Wed, 19 Sep 2007 15:12:44 -0400

cdebconf (0.120) unstable; urgency=low

  [ Frans Pop ]
  * debian/rules: add -l option in the dh_shlibsdep call for the gtk udeb to
    ensure it gets a correct dependency on licairo-directfb2-udeb.
    This means we need an additional build dependency on libcairo-directfb2,
    but no longer need the versioned dependency on dpkg-dev. The same solution
    was chosen for cairo itself and is probably more reliable than depending
    on RPATH in objdump (especially as lintian does not seem to like RPATHs).

  [ Attilio Fiandrotti ]
  * Removed workaround for #407035 because upstream fixed in gtk+ 2.10.x series.

  [ Colin Watson ]
  * Fix reference leak in question_get_text.

  [ Joey Hess ]
  * Call dh_md5sums.

  [ Updated translations ]