@@ -26,7 +26,7 @@ would be stored in:
 
 The library must provide a function with the following name:
 
-  <frontend>_handler_<type>
+  cdebconf_<frontend>_handler_<type>
 
 Any hyphens in <type> here are substituted with underscores, so:
 
@@ -35,11 +35,11 @@ Any hyphens in <type> here are substituted with underscores, so:
 The required prototype for this function depends on the frontend. For newt
 and text, it is (again with hyphens in <type> substituted with underscores):
 
-  int <frontend>_handler_<type>(struct frontend *obj, struct question *q)
+  int cdebconf_<frontend>_handler_<type>(struct frontend *obj, struct question *q)
 
 For gtk, it is:
 
-  int <frontend>_handler_<type>(struct frontend *obj, struct question *q, GtkWidget *questionbox);
+  int cdebconf_<frontend>_handler_<type>(struct frontend *obj, struct question *q, GtkWidget *questionbox);
 
 The handler should return DC_OK (defined in common.h) if all went well,
 DC_GOBACK if the user wants to back up to the previous question, or DC_NOTOK
