@@ -4,6 +4,9 @@ cdebconf (0.124) UNRELEASED; urgency=low
   * Load frontend with RTLD_NOW | RTLD_GLOBAL to allow plugins to access
     frontend API without requiring calls to dlsym().  Kudos to Steve Langasek
     for the help to figure this out!
+  * Put frontend plugins symbol in the "cdebconf_" namespaces.  The old
+    symbols are still looked up as a fallback to ensure compatibility.
+  * Fix a memory leak in plugin_new() along the way. 
 
  -- Jérémy Bobbio <lunar@debian.org>  Tue, 25 Sep 2007 19:04:00 +0200
 
